--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <p id="label">Seu esboço: </p>
     <p id="confidence">Precisão: </p>
     <p id="drawing">O que você deve desenhar: </p>
+    <br>
+    <button onclick="clear()">Limpar canvas</button>
   </center>
   <br>
   <br>
